Fixed the homepage viewport issue on mobile devices. Screen adapts to given device viewport to render full screen, inlcuding footer, without scrolling.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -32,6 +32,21 @@ body {
     width: 100vw;
     padding: 8rem 20px 3rem;
     height: 100vh;
+     /* Smaller screens with a maximum width of 599px */
+     @media only screen and (max-width: 599px) {
+        @media only screen and (min-height: 900px)
+        {
+            height: 75vh;
+        }
+    }
+
+     /* Smaller screens with a maximum width of 599px */
+     @media only screen and (max-width: 1030px) {
+        @media only screen and (min-height: 1300px)
+        {
+            height: 50vh;
+        }
+    }
     display: flex;
     flex-direction: column;
 }
@@ -312,7 +327,7 @@ body {
     background-color: gold;
     /* Adjust the color of the line as needed */
     position: absolute;
-    width: 100vw;
+    width: 100%;
     left: 0;
     right: 0;
     top: 72px;
@@ -375,8 +390,10 @@ body {
     height: 116px;
 }
 
-.homepage-wrapper {
+.homepage-wrapper{
+    overflow: -moz-hidden-unscrollable;
     overflow: hidden;
+
 }
 
 .homepage {
@@ -389,9 +406,12 @@ body {
     text-align: center;
     text-wrap: balance;
 
-      /* Smaller screens with a maximum width of 599px */
-      @media only screen and (max-width: 599px) {
-        height: 75%;
+    /* Smaller screens with a maximum width of 599px */
+    @media only screen and (max-width: 599px) {
+        @media only screen and (min-height: 900px)
+        {
+            margin-top: 30%;
+        }
     }
 
 }
@@ -402,7 +422,7 @@ body {
 }
 
 .home-to-about {
-    position: fixed;
+    position: absolute;
     transform: translate(-55%, -50%);
     line-height: 10px;
     border: 2px solid gold;
@@ -688,7 +708,7 @@ button {
     position: absolute;
     background: #e0f2f1;
     opacity: 0.8;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    border: transparent;
     border-radius: 10px 10px 2px 2px;
     -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5), inset 0 1px rgba(255, 255, 255, 0.3),
         inset 0 10px rgba(255, 255, 255, 0.2), inset 0 10px 20px rgba(255, 255, 255, 0.25),
@@ -703,6 +723,7 @@ button {
     top: 70px;
     width: 0;
     max-width: 20%;
+    overflow: hidden;
 
     /* Smaller screens with a maximum width of 599px */
     @media only screen and (max-width: 599px) {
@@ -713,7 +734,6 @@ button {
         right: 0%;
     }
 
-    overflow: hidden;
     z-index: 3;
     font-size: 18px;
     transform: translateX(0px);
